<resources>
    <string name="app_name">FitDay</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_change_body_parameters">Change body parameters</string>
    <string name="sex_text_view">Choose your gender</string>
    <string name="male_button">male</string>
    <string name="female_button">female</string>
    <string name="height_text_view">Height</string>
    <string name="weight_text_view">Weight</string>
    <string name="age_text_view">Age</string>
    <string name="confirm_button">Confirm</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="add_meal_button">Dodaj</string>
    <string name="about_button">About</string>
    <string name="menu_signout">Sign out</string>
    <string name="menu_signin">Sign in</string>

    <string-array name="mealTimes">
        <item>Breakfast</item>
        <item>Dinner</item>
        <item>Supper</item>
        <item>Snacks</item>
        <item>Other</item>
    </string-array>
</resources>
