<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".BodyParamsForm">

    <TextView
            android:text="@string/sex_text_view"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:id="@+id/sex" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.100000024"
            app:layout_constraintHorizontal_bias="0.1"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.1"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/sex"
            app:layout_constraintVertical_bias="0.0" android:id="@+id/radioGroup_Sex">
        <RadioButton
                android:text="@string/male_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/male" android:layout_weight="1"/>
        <RadioButton
                android:text="@string/female_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/female" android:layout_weight="1"/>
    </RadioGroup>
    <TextView
            android:text="@string/height_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TextView_height" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup_Sex" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintVertical_bias="0.100000024"/>

    <com.michaelmuenzer.android.scrollablennumberpicker.ScrollableNumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/snp_height"
            app:snp_buttonIconLeft="@drawable/ic_left"
            app:snp_buttonIconRight="@drawable/ic_right"
            app:snp_stepSize="1"
            app:snp_minValue="0"
            app:snp_value="120"
            app:snp_orientation="horizontal"
            app:snp_updateInterval="10"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/TextView_height" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.1" app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="@string/weight_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TextView_weight"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/snp_height" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintVertical_bias="0.100000024"
            app:layout_constraintHorizontal_bias="0.1"/>
    <com.michaelmuenzer.android.scrollablennumberpicker.ScrollableNumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/snp_weight"
            app:snp_buttonIconLeft="@drawable/ic_left"
            app:snp_buttonIconRight="@drawable/ic_right"
            app:snp_stepSize="1"
            app:snp_minValue="0"
            app:snp_value="50"
            app:snp_orientation="horizontal"
            app:snp_updateInterval="10"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/TextView_weight"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1" app:layout_constraintVertical_bias="0.0">
    </com.michaelmuenzer.android.scrollablennumberpicker.ScrollableNumberPicker>
    <TextView
            android:text="@string/age_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/TextView_age"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.1" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/snp_weight" app:layout_constraintVertical_bias="0.100000024"
            android:layout_marginStart="8dp"/>
    <com.michaelmuenzer.android.scrollablennumberpicker.ScrollableNumberPicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/snp_age"
            app:snp_buttonIconLeft="@drawable/ic_left"
            app:snp_buttonIconRight="@drawable/ic_right"
            app:snp_stepSize="1"
            app:snp_minValue="0"
            app:snp_value="20"
            app:snp_orientation="horizontal"
            app:snp_updateInterval="10"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/TextView_age"
            app:layout_constraintHorizontal_bias="0.1" app:layout_constraintVertical_bias="0.0"/>
    <Button
            android:text="@string/confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/confirm_body_params"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/snp_age"/>


</android.support.constraint.ConstraintLayout>